Fixed some minor layout issues to the adventure game for smaller screens.

--- a/sass/layout/pages/_adventure-game.scss
+++ b/sass/layout/pages/_adventure-game.scss
@@ -77,7 +77,7 @@
 		.button-wrap {
 			padding: 0;
 
-			@media only screen and (max-width: 768px) {
+			@media only screen and (max-width: 991px) {
 				display: none;
 			}
 
